@@ -1,5 +1,6 @@
 # Generated from:
 # https://github.com/zopefoundation/meta/tree/master/config/pure-python
+*.dll
 *.egg-info/
 *.profraw
 *.pyc
@@ -27,4 +28,5 @@ lib64
 log/
 parts/
 pyvenv.cfg
+testing.log
 var/
