@@ -2,13 +2,14 @@
 # https://github.com/zopefoundation/meta/tree/master/config/pure-python
 [meta]
 template = "pure-python"
-commit-id = "d1cc3112dca7b71f6fbd14b1319e2d39f72aeb1a"
+commit-id = "4f0f7596"
 
 [python]
 with-pypy = true
-with-legacy-python = true
 with-sphinx-doctests = false
 with-windows = false
+with-future-python = false
+with-macos = false
 
 [tox]
 use-flake8 = true
