@@ -1,4 +1,3 @@
-# -*- coding: utf-8 -*-
 ##############################################################################
 #
 # Copyright (c) 2002, 2015 Zope Foundation and Contributors.
@@ -14,9 +13,11 @@
 """Test of AuthEncoding
 """
 
-from AuthEncoding import AuthEncoding
-from ..compat import b, u
 import pytest
+
+from .. import AuthEncoding
+from ..compat import b
+from ..compat import u
 
 
 def testListSchemes():
@@ -24,7 +25,7 @@ def testListSchemes():
 
 
 @pytest.mark.parametrize('schema_id', AuthEncoding.listSchemes())
-@pytest.mark.parametrize('password', [u'good_pw', u'gööd_pw', b(u'gööd_pw')])
+@pytest.mark.parametrize('password', ['good_pw', 'gööd_pw', b('gööd_pw')])
 def testGoodPassword(schema_id, password):
     enc = AuthEncoding.pw_encrypt(password, schema_id)
     assert enc != password
@@ -36,15 +37,15 @@ def testGoodPassword(schema_id, password):
 
 @pytest.mark.parametrize('schema_id', AuthEncoding.listSchemes())
 @pytest.mark.parametrize(
-    'password', [u'OK_pa55w0rd \n', u'OK_pä55w0rd \n', b(u'OK_pä55w0rd \n')])
+    'password', ['OK_pa55w0rd \n', 'OK_pä55w0rd \n', b('OK_pä55w0rd \n')])
 def testBadPassword(schema_id, password):
     enc = AuthEncoding.pw_encrypt(password, schema_id)
     assert enc != password
-    assert not AuthEncoding.pw_validate(enc, u'xxx')
+    assert not AuthEncoding.pw_validate(enc, 'xxx')
     assert not AuthEncoding.pw_validate(enc, b'xxx')
-    assert not AuthEncoding.pw_validate(u(enc), u'xxx')
+    assert not AuthEncoding.pw_validate(u(enc), 'xxx')
     assert not AuthEncoding.pw_validate(enc, enc)
-    if schema_id != u'CRYPT':
+    if schema_id != 'CRYPT':
         # crypt truncates passwords and would fail this test.
         assert not AuthEncoding.pw_validate(enc, password[:-1])
     assert not AuthEncoding.pw_validate(enc, password[1:])
@@ -53,11 +54,11 @@ def testBadPassword(schema_id, password):
 
 @pytest.mark.parametrize('schema_id', AuthEncoding.listSchemes())
 def testShortPassword(schema_id):
-    pw = u'1'
+    pw = '1'
     enc = AuthEncoding.pw_encrypt(pw, schema_id)
     assert AuthEncoding.pw_validate(enc, pw)
     assert not AuthEncoding.pw_validate(enc, enc)
-    assert not AuthEncoding.pw_validate(enc, u'xxx')
+    assert not AuthEncoding.pw_validate(enc, 'xxx')
 
 
 long_password_parameters = [
@@ -70,12 +71,12 @@ if 'CRYPT' in AuthEncoding.listSchemes():
 
 @pytest.mark.parametrize('schema_id', long_password_parameters)
 def testLongPassword(schema_id):
-    pw = u'Pw' * 2000
+    pw = 'Pw' * 2000
     enc = AuthEncoding.pw_encrypt(pw, schema_id)
     assert AuthEncoding.pw_validate(enc, pw)
     assert not AuthEncoding.pw_validate(enc, enc)
-    assert not AuthEncoding.pw_validate(enc, u'xxx')
-    if u'CRYPT' not in schema_id:
+    assert not AuthEncoding.pw_validate(enc, 'xxx')
+    if 'CRYPT' not in schema_id:
         # crypt and bcrypt truncates passwords and would fail these tests.
         assert not AuthEncoding.pw_validate(enc, pw[:-2])
         assert not AuthEncoding.pw_validate(enc, pw[2:])
@@ -83,34 +84,34 @@ def testLongPassword(schema_id):
 
 @pytest.mark.parametrize('schema_id', AuthEncoding.listSchemes())
 def testBlankPassword(schema_id):
-    pw = u''
+    pw = ''
     enc = AuthEncoding.pw_encrypt(pw, schema_id)
     assert enc != pw
     assert AuthEncoding.pw_validate(enc, pw)
     assert not AuthEncoding.pw_validate(enc, enc)
-    assert not AuthEncoding.pw_validate(enc, u'xxx')
+    assert not AuthEncoding.pw_validate(enc, 'xxx')
 
 
 def testUnencryptedPassword():
     # Sanity check
-    pw = u'my-password'
+    pw = 'my-password'
     assert AuthEncoding.pw_validate(pw, pw)
-    assert not AuthEncoding.pw_validate(pw, pw + u'asdf')
+    assert not AuthEncoding.pw_validate(pw, pw + 'asdf')
 
 
 def testEncryptWithNotSupportedScheme():
     with pytest.raises(ValueError) as err:
-        AuthEncoding.pw_encrypt(u'asdf', 'MD1')
+        AuthEncoding.pw_encrypt('asdf', 'MD1')
     assert 'Not supported: MD1' == str(err.value)
 
 
 def testEncryptAcceptsTextAndBinaryEncodingNames():
-    assert (AuthEncoding.pw_encrypt(u'asdf', b'SHA') ==
-            AuthEncoding.pw_encrypt(u'asdf', u'SHA'))
+    assert (AuthEncoding.pw_encrypt('asdf', b'SHA') ==
+            AuthEncoding.pw_encrypt('asdf', 'SHA'))
 
 
 def testIsEncryptedAcceptsTextAndBinary():
     assert AuthEncoding.is_encrypted(b'{SHA}')
-    assert AuthEncoding.is_encrypted(u'{SHA}')
+    assert AuthEncoding.is_encrypted('{SHA}')
     assert not AuthEncoding.is_encrypted(b'foo')
-    assert not AuthEncoding.is_encrypted(u'foo')
+    assert not AuthEncoding.is_encrypted('foo')
