@@ -4,13 +4,11 @@
 minversion = 3.18
 envlist =
     lint
-    py27
-    py35
-    py36
     py37
     py38
     py39
-    pypy
+    py310
+    py311
     pypy3
     coverage
 
@@ -28,14 +26,26 @@ extras =
 [testenv:lint]
 basepython = python3
 skip_install = true
-deps =
-    flake8
-    check-manifest
-    check-python-versions
 commands =
+    isort --check-only --diff {toxinidir}/src {toxinidir}/setup.py
     flake8 src setup.py
     check-manifest
     check-python-versions
+deps =
+    check-manifest
+    check-python-versions >= 0.19.1
+    wheel
+    flake8
+    isort
+
+[testenv:isort-apply]
+basepython = python3
+skip_install = true
+commands_pre =
+deps =
+    isort
+commands =
+    isort {toxinidir}/src {toxinidir}/setup.py []
 
 [testenv:coverage]
 basepython = python3
@@ -43,18 +53,16 @@ allowlist_externals =
     mkdir
 deps =
     coverage
-    coverage-python-version
     pytest
     pytest-cov
 commands =
     mkdir -p {toxinidir}/parts/htmlcov
     py.test --cov=src src
-    coverage html
-    coverage report -m --fail-under=95
+    coverage html --ignore-errors
+    coverage report --ignore-errors --show-missing --fail-under=95
 
 [coverage:run]
 branch = True
-plugins = coverage_python_version
 source = AuthEncoding
 
 [coverage:report]
