@@ -4,8 +4,12 @@ Changelog
 5.0 (unreleased)
 ----------------
 
+- Fix schema sorting bug.
 
 - Drop support for Python 2.7, 3.5, 3.6.
+
+- Add support for Python 3.10 and 3.11.
+
 
 4.3 (2021-06-29)
 ----------------
